--- a/BaseLib/BaseLib.vcxproj
+++ b/BaseLib/BaseLib.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="Src\Util\RunLogic.h" />
     <ClInclude Include="Src\Util\SciConstants.h" />
     <ClInclude Include="Src\Util\ScopedValue.h" />
+    <ClInclude Include="Src\Util\ScriptContents.h" />
     <ClInclude Include="Src\Util\ScriptId.h" />
     <ClInclude Include="Src\Util\ScriptStream.h" />
     <ClInclude Include="Src\Util\StlUtil.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="Src\Util\Logger.cpp" />
     <ClCompile Include="Src\Util\PerfTimer.cpp" />
     <ClCompile Include="Src\Util\RunLogic.cpp" />
+    <ClCompile Include="Src\Util\ScriptContents.cpp" />
     <ClCompile Include="Src\Util\ScriptId.cpp" />
     <ClCompile Include="Src\Util\ScriptStream.cpp" />
     <ClCompile Include="Src\Util\Stream.cpp" />
